--- a/LeComCre.Web/LeComCre.Web/index.html
+++ b/LeComCre.Web/LeComCre.Web/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
     <title>..:: Lé Com Cré ::..</title>
+    <meta http-equiv="refresh" content="2;url=http://lecomcre.afonsoft.com/default.aspx" />
 </head>
 <body>
 <script type="text/javascript" language="javascript">
