--- a/LeComCre.Web/LeComCre.Web/index.html
+++ b/LeComCre.Web/LeComCre.Web/index.html
@@ -2,9 +2,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>..:: Lé Com Cré ::..</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7; IE=7" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Language" content="pt-br" />
+    <meta name="country" content="Brazil" />
+    <meta name="title" content="..:: Lé Com Cré ::.." />
+    <meta name="robots" content="all" />
+    <meta name="author" content="Afonso Dutra Nogueira Filho" />
+    <meta name="Email" content="lecomcre@afonsoft.com" />
+    <meta name="copyright" content="Lé Com Cré - 2010" />
     <meta http-equiv="refresh" content="2;url=http://lecomcre.afonsoft.com/default.aspx" />
 </head>
 <body>
+    <noscript>
+        <span>Favor habilidar o JavaScript do seu navegador</span>
+    </noscript>
 
     <script type="text/javascript" language="javascript">
         window.location.href = "default.aspx";
