--- a/LeComCre.Web/LeComCre.Web/index.html
+++ b/LeComCre.Web/LeComCre.Web/index.html
@@ -14,12 +14,13 @@
     <meta http-equiv="refresh" content="2;url=http://lecomcre.afonsoft.com/default.aspx" />
 </head>
 <body>
-    <noscript>
-        <span>Favor habilidar o JavaScript do seu navegador</span>
-    </noscript>
-
-    <script type="text/javascript" language="javascript">
-        window.location.href = "default.aspx";
-    </script>
+    <center>
+        <noscript>
+            <span>Favor habilidar o JavaScript do seu navegador</span>
+        </noscript>
+        <script type="text/javascript" language="javascript">
+            window.location.href = "default.aspx";
+        </script>
+    </center>
 </body>
 </html>
